# trellis

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  CANARY_TASKS.yaml  CLAUDE.md  FINANCEPY_BINDINGS.yaml  FRAMEWORK_TASKS.yaml  LICENSE  LIMITATIONS.md  MARKET_SCENARIOS.yaml  Makefile  PROBLEMATIC_TASKS.yaml  README.md  TASKS.yaml  TASKS_BENCHMARK_FINANCEPY.yaml  TASKS_EXTENSION.yaml  TASKS_FPML_CONFORMANCE.yaml  TASKS_NEGATIVE.yaml  TASKS_PROOF_LEGACY.yaml  pyproject.toml  setup.py  task_results_latest.json
docs/: autonomous_library_development_workstream.md  conf.py  design_analytical_support_contract_algebra.md  design_analytical_support_substrate.md  design_connector_stress_regression_gate.md  design_generation_glue_surfaces.md  design_quanto_runtime_contract.md  design_ranked_observation_basket_semantics.md  design_semantic_product_synthesis.md  design_validation_contract_loop.md  early_exercise_monte_carlo_policy_family.md  glossary.md  index.rst  market_data_workstream.md  migration_notes.md  openai_stage_model_selection.md  phase_c0_contract_synthesis_implementation_plan.md  phase_c0_glue_surface_sweep.md  phase_c0_himalaya_contract_plan.md  phase_c0_quanto_contract_plan.md  phase_c1_analytical_support_plan.md  phase_c2_family_name_free_semantic_synthesis_plan.md  phase_contract_synthesis_quanto_himalaya_handoff.md  phase_m23_connector_stress_regression_plan.md  platform_loop_workstream.md  qua-284-arbitrary-derivative-proving-run.md  qua-328-poc.md  quickstart.rst  refactor_2c_review.md  refactor_2d_review.md  refactor_final_review.md  (+51 more)
(+2358 files in other folders)
